--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
   "homepage": "https://github.com/Shubham-Somani/s3-tester-backend#readme",
   "devDependencies": {
     "@types/express": "^4.17.11",
-    "@types/node": "^15.0.2",
+    "@types/node": "^15.3.0",
     "tslint": "^6.1.3",
     "typescript": "^4.2.4"
   },
   "dependencies": {
     "@types/cors": "^2.8.10",
-    "aws-s3-manager": "^1.0.1",
+    "aws-s3-manager": "2.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1"
